--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
-    "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^7.0.2",
-    "react-stately": "^3.34.0"
+    "react-slick": "^0.30.3",
+    "react-stately": "^3.34.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
@@ -30,6 +31,7 @@
     "@types/node": "^22.10.2",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-slick": "^0.23.13",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.15.0",
     "eslint-plugin-react-hooks": "^5.0.0",
